=========================================================
xx.xx.200x   1.00 RC-2
=========================================================
- Added: random block [hisapapa]

- Fixed: icons and text in buttons could break
- Fixed: thumbnail class not working
- Fixed: date format in blocks will use default from prefs if not set

=========================================================
13.12.2008   1.00 RC-1
=========================================================
- Revamped Main Index page in Control Panel
- Revamped buttons front page

- Added: About page
- Added: developers, testers, translators, etc for About page
- Added: option to have linked terms if imGlossary is installed
- Added: option for selecting source of autoscr.shot (Thumbshot.org or Mozshot)
- Added: option to set amount of category columns on Index Page
- Added: option to make rating features invisible
- Added: captcha to submit form
- Added: RSS feed using icmsfeed.php
- Added: RSS feed configuration form
- Added: GPL2 license incl. unofficial translations
- Added: upgrade from WF-Links 1.06
- Added: icons for button bar, plus new module and category icons
- Added: option to set linebreak in submit forms (off by default)
- Added: option to clone a link
- Added: Home button
- Added: css stylesheet
- Added: AJAX rating to replace old rating feature

- Renamed: module name from 'WF-Links' into 'imLinks'
- Renamed: file 'bugfixlist.txt' into 'changelog.txt'

- Updated the online documentation

- Fixed: block settings [skenow]
- Fixed: search function causing conflict with 'View profile'
- Fixed: category icons change state when a sub-category contains new link
- Fixed: unclosed div-tag in imlinks_viewcat.html
- Fixed: body-tag was declared twice in imlinks_print.html
- Fixed: displaying dislaimer in Quick View


=========================================================
18.10.2008   1.06 Final
=========================================================
- Added Newbbex to list of forums